<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/pillipaevik_peamine_taust">
    <EditText
        android:id="@+id/nimi"
        android:hint="@string/nimi_vihje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tekstilahtri_aaris"
        android:layout_marginStart="@dimen/horisontaalne_aaris"
        android:layout_marginEnd="@dimen/horisontaalne_aaris"
        android:backgroundTint="@android:color/white"
        android:maxLength="48"
        android:inputType="textCapSentences|textMultiLine"/>
    <EditText
        android:id="@+id/autor"
        android:hint="@string/autor_vihje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horisontaalne_aaris"
        android:layout_marginEnd="@dimen/horisontaalne_aaris"
        android:backgroundTint="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:maxLength="64"
        android:inputType="textCapSentences|textMultiLine"/>
    <EditText
            android:id="@+id/kommentaar"
            android:hint="@string/kommentaar_vihje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horisontaalne_aaris"
            android:layout_marginEnd="@dimen/horisontaalne_aaris"
            android:layout_marginBottom="@dimen/vertikaalne_aaris"
            android:backgroundTint="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:maxLength="256"
            android:inputType="textCapSentences|textMultiLine"/>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:paddingStart="@dimen/horisontaalne_aaris"
                    android:paddingEnd="@dimen/horisontaalne_aaris"
                    android:background="@color/tabeli_rea_andmed">
        <LinearLayout android:id="@+id/harjutustearvkast"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentStart="true"
                      android:layout_centerVertical="true"
                      android:orientation="horizontal">
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical"
                       android:src="@drawable/ic_replay_white"/>
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center_vertical"
                          android:orientation="vertical">
                    <TextView android:id="@+id/teoseharjutustearv"
                              android:layout_width="@dimen/korduste_arvu_laius"
                              android:layout_height="wrap_content"
                              android:gravity="center_horizontal"
                              android:layout_gravity="center"
                              android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                              android:textColor="@android:color/white"
                              android:text="0"/>
                    <TextView android:id="@+id/teoseharjutustearvtana"
                              android:layout_width="@dimen/korduste_arvu_laius"
                              android:layout_height="wrap_content"
                              android:gravity="center_horizontal"
                              android:layout_gravity="center"
                              android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                              android:textColor="@android:color/white"
                              android:text="(0)"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/harjutustekestuskast"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerVertical="true"
                      android:layout_toEndOf="@+id/harjutustearvkast"
                      android:layout_toStartOf="@+id/arhiivis"
                      android:orientation="horizontal">
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical"
                       android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                       android:src="@drawable/ic_query_builder_white"/>
            <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:orientation="vertical">
                <TextView android:id="@+id/teoseharjutustekestus"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@android:color/white"
                          android:text="00:00"/>
                <TextView android:id="@+id/teoseharjutustekestustana"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@android:color/white"
                          android:text="(00:00)"/>
            </LinearLayout>
        </LinearLayout>
        <CheckBox
                android:id="@+id/arhiivis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/arhiivis"/>
    </RelativeLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/eraldusjoone_paksus"
            android:background="@android:color/white"/>
    <ListView android:id="@+id/harjutuslist"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/pillipaevik_peamine_taust"
              android:choiceMode="singleChoice"
              android:dividerHeight="@dimen/eraldusjoone_paksus"
              android:divider="@android:color/white"/>
</LinearLayout>
